--- a/pages/posts/计算机考研篇.md
+++ b/pages/posts/计算机考研篇.md
@@ -6,7 +6,7 @@ categories: 生活记录
 aplayer: true
 ---
 
-# 前言
+## 前言
 
 我的备考时间很长，一年多，仅供参考，不建议拉这么长，~~如果我准备保研了是不是结果会不一样~~。
 
@@ -18,7 +18,7 @@ aplayer: true
 >
 >warning：不适用于跨考同学
 
-# 备考
+## 备考
 
 我觉得可以分为三个时期，前期`1-6月份`，中期`7-9月份`，后期`10-12月份`
 
@@ -26,7 +26,7 @@ aplayer: true
 
 
 
-## 前期
+### 前期
 
 实际上在暑假前都是前期吧我觉得，我是22年10月份就开始断断续续开始了，为什么说断断续续，因为我光~~小张~~的基础30讲前8讲，我学到了寒假还没学明白，而且中间其实花的时间也少，请读者自行略过，绝不建议这么早开始（~~浪费玩的大好时间~~）。
 
@@ -80,7 +80,7 @@ aplayer: true
 
 
 
-## 中期-暑假篇
+### 中期-暑假篇
 
 当你走到这里时，已经6月中旬了，真正的考研才开始。没学校课程的打扰了，现在你生活里只有两个字**复习**，此时每天学习10个小时左右了，而且需要认真学，注意力集中。
 
@@ -171,7 +171,7 @@ aplayer: true
 
 
 
-## 后期
+### 后期
 
 此时你已经9月份开学了，你的朋友圈从暑假朋友们到处玩，开始要逐渐变成保研人的一路生花了，考研人最惨的一段时光来了😓
 
@@ -239,7 +239,7 @@ aplayer: true
 
 
 
-# 书＆题-购买指南
+## 书＆题-购买指南
 
 我猜肯定有人耐不住了，一定在想，怎么不告诉我什么时候买真题？什么垃圾考研教程啊！
 
@@ -292,7 +292,7 @@ aplayer: true
 
 
 
-# 后记
+## 后记
 
 很早就想搭个博客，给你们写个考研相关的文章，没想到一言难尽啊，中午吃完饭不到一点开始弄，一直到现在8点半才写道这里，搭建太麻烦了，~~一定不是我太笨的缘故~~
 
@@ -342,15 +342,15 @@ aplayer: true
 
 
 
-# Q＆A-问题解答
+## Q＆A-问题解答
 
 
 
-## 在哪看课程视频？
+### 在哪看课程视频？
 
 我全用的盗版教材，没有买过正版书，穷苦学生一枚呜呜呜🫡。网课买盗版教材商家会有网盘群的，也可以去公众号《研池大叔》那里面找（里面也是网盘链接）。
 
-## 408代码题怎么写？没学过C/C++？
+### 408代码题怎么写？没学过C/C++？
 
 - 如果你学过c/c++，那就等强化时看课就行了
 
@@ -363,7 +363,7 @@ aplayer: true
 
 ![408](./计算机考研篇/408.jpg)
 
-## 11408不知道考哪里？
+### 11408不知道考哪里？
 
 💕💕💕北京211**点击就送**💕💕💕
 
@@ -373,7 +373,7 @@ aplayer: true
 
 欢迎报考[中国传媒大学](https://yz.cuc.edu.cn/)
 
-## 专业课要背吗？
+### 专业课要背吗？
 
 要，也不要。
 
