--- a/pages/posts/遗憾总是贯穿人生始终.md
+++ b/pages/posts/遗憾总是贯穿人生始终.md
@@ -96,6 +96,10 @@ categories: 那些神奇的梦
 
 笔落至此，似乎文字与所要记录的梦越发偏离。梦中我见到了某个朋友，
 
+>
+>
+>没写完。为防止遗忘，简略写下大概，我短暂的梦里，我经历了互相奔赴，我满怀期待，你却告诉我，你似乎有了喜欢的人了，游泳时碰到的，很帅，聊的很来，醒来后一阵怅然。
+
   :::
 
 <!-- valaxy-encrypt-end -->
