--- a/pages/posts/计算机考研篇.md
+++ b/pages/posts/计算机考研篇.md
@@ -18,6 +18,12 @@ aplayer: true
 >
 >warning：不适用于跨考同学
 
+![result](./计算机考研篇/result.png)
+
+>
+>
+>终于出了，等传等的好苦，初复试第一成功上岸。
+
 ## 备考
 
 我觉得可以分为三个时期，前期`1-6月份`，中期`7-9月份`，后期`10-12月份`
