--- a/pages/posts/此去经年，应是良辰好景虚设.md
+++ b/pages/posts/此去经年，应是良辰好景虚设.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 遗憾总是贯穿人生始终
+title: 此去经年，应是良辰好景虚设
 date: 2024-04-03 17:37:25
 aplayer: true
 categories: 那些神奇的梦
@@ -50,7 +50,7 @@ categories: 那些神奇的梦
 
 >
 >
-><font face="隶书" size="5">我不停奔跑，只为追赶上那个被寄予厚望的自己。</font>
+>我不停奔跑，只为追赶上那个被寄予厚望的自己。
 
 <br>
 
