--- a/pages/posts/计算机考研篇.md
+++ b/pages/posts/计算机考研篇.md
@@ -7,6 +7,14 @@ aplayer: true
 top: 1
 ---
 
+
+
+## Tips
+
+- 博客已经可以评论，有问题可以留言，我会将问题加入到该文章中。
+
+- 博客依托github服务器，所以打开可能会慢，后续会用自己的服务器。
+
 ## 前言
 
 我的备考时间很长，一年多，仅供参考，不建议拉这么长，~~如果我准备保研了是不是结果会不一样~~。
@@ -49,7 +57,7 @@ top: 1
 
 
 
-660讲解强推！！！👇👇👇看了直接顿悟
+660讲解强推b站考研up小吴学长！！！👇👇👇看了直接顿悟
 
 [官方授权｜25考研数学《基础过关660题》逐题超精讲（数一二三持续更新）_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV14T4y1n7Ec/?spm_id_from=333.337.search-card.all.click&vd_source=8d88992bb4c0bfded89de60af69a7db3)
 
@@ -73,7 +81,7 @@ top: 1
 
 3月开始的，顺序：数据结构->操作系统->计算机组成原理->计算机网络
 
-数据结构我一开始犯了个大错，看完用电脑实现算法，可前往别学我，浪费时间x2，我进度其实很慢，因为课多，加上方法不对，我4月底吧，才结束数据结构。
+数据结构我一开始犯了个大错，看完用电脑实现算法，可千万别学我，浪费时间x2，我进度其实很慢，因为课多，加上方法不对，我4月底吧，才结束数据结构。
 
 操作系统我5月开的，结果放假（6月中旬）回家了用了几天才学完。
 
@@ -198,7 +206,7 @@ top: 1
   
   - 1000题和880完了之后我是不建议二刷，浪费时间，直接10月份开真题就行了，我是开的真的很晚，导致差点没做完
   
-  - 真题可以留个进3年的，自己11月模拟下
+  - 真题可以留个近3年的，自己11月模拟下
   
   - 除真题外还有，《张宇8套卷》《李林6套》《张宇4套》等等等，我建议是张宇的必做，也有说李林的都做，多买几套做做吧，不吃亏，等10月了你就自然而然知道买哪个了
   
@@ -227,7 +235,7 @@ top: 1
   - 政治不需要真题！！！
   - 政治严格来说分为选择题和大题
   - 大题是11月底再开始背的，刚进12月也行
-  - 选择题的话，做肖1000题，多做几遍（反正都说刷好几遍，但是一道考场一看一个原题类似题都没有，哭死）；看完徐涛的视频可以去看腿姐的选择技巧课，9月开更，一个多月更完
+  - 选择题的话，做肖1000题，多做几遍（反正都说刷好几遍，但是一到考场一看一个原题类似题都没有，哭死）；看完徐涛的视频可以去看腿姐的选择技巧课，9月开更，一个多月更完
   - 大题我是认准的腿姐，一般不是背腿姐就是跟肖4，12月也会有腿姐9页纸，是真要下功夫背啊，挺多的
 
 
@@ -263,7 +271,7 @@ top: 1
   - [ ] 《基础30讲》
   - [ ] 《张宇1000题》
   - [ ] 《句句真言》 此为田静语法课教材
-  - [ ] ~~《墨墨背单词》~~随便个背单词App即可
+  - [ ] 《墨墨背单词》或者其他背单词App
   - [ ] 王道4本
   - [ ] 《基础过关660》
 
@@ -301,7 +309,7 @@ top: 1
 
 ## 后记
 
-很早就想搭个博客，给你们写个考研相关的文章，没想到一言难尽啊，中午吃完饭不到一点开始弄，一直到现在8点半才写道这里，搭建太麻烦了，~~一定不是我太笨的缘故~~
+很早就想搭个博客，给你们写个考研相关的文章，没想到一言难尽啊，中午吃完饭不到一点开始弄，一直到现在8点半才写到这里，搭建太麻烦了，~~一定不是我太笨的缘故~~
 
 
 
