--- a/pages/posts/计算机考研篇.md
+++ b/pages/posts/计算机考研篇.md
@@ -15,6 +15,16 @@ top: 2
 
 - 博客依托github服务器，所以打开可能会慢，后续会用自己的服务器。
 
+- ⏱️24/7/28 再次更新，将备考详细化，傻瓜式教程。
+
+>更新：
+>
+>1. 专业课以往仅适用408，已加入部分自命题备考思路
+>2. 完善课程选择以及资源寻找问题
+>3. 完善做题思路
+>
+>
+
 ## 前言
 
 我的备考时间很长，一年多，仅供参考，不建议拉这么长，~~如果我准备保研了是不是结果会不一样~~。
@@ -35,11 +45,15 @@ top: 2
 
 ## 备考
 
-我觉得可以分为三个时期，前期`1-6月份`，中期`7-9月份`，后期`10-12月份`
+我觉得可以分为三个时期，前期`1-6月份`，中期`7-8月份`，后期`9-12月份`
 
 三个时期任务各有侧重，我会分开来写；一部分为我的备考经历，一部分为建议。
 
+**另外**，无论你是遇到了老师选择或者备考思路的问题，完全可以去b站搜，我的博客并不可能完全涵盖所有问题，b站上的有些视频也是很清楚的，比如中期时英语我只简单写了写看唐迟老师或颉斌斌老师的阅读课，看完刷阅读题，倘若你还不清楚具体思路，你可以去b站搜，考研英语1阅读，相信视频会给你更加详细的答案。
 
+![bibili](./计算机考研篇/bibili.png)
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 图片过曝可能是外接屏幕问题，仅截图会出现问题
 
 ### 前期
 
@@ -61,11 +75,18 @@ top: 2
 
 [官方授权｜25考研数学《基础过关660题》逐题超精讲（数一二三持续更新）_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV14T4y1n7Ec/?spm_id_from=333.337.search-card.all.click&vd_source=8d88992bb4c0bfded89de60af69a7db3)
 
-
+<br>
 
 至于进度，建议最晚暑假前（7月）完成基础30讲
 
+>
+>
+>1. 关于如何刷660：660并没有按照你学习教材时的章节来进行区分题目，它的题目是连续的，需要你自行区分该做到哪里，我相信你是可以区分开的，学了一章节知识点后，就按照顺序去打开660即可，教材的知识点学习肯定也是线性的，与660题目顺序是大致的，所以你只要自行区分到做到哪里即可，简单来说就是，比如你刚开始肯定学的函数和极限对吧，一打开660就是函数和极限的题，做了几十道后发现下一题是积分，那就收手，等学完下一章再做。
+>2. 660解析视频：我上面有提到哪个不会去看小吴的讲解，但并不是全看，首先做错的题你肯定要去看，另外就是你做题时，对某个题目理解不够，或某个选项不知怎么做出来，那就圈上这个题，不管做没做对，都要去看讲解。我是觉着660是很重要的，吃透每一道题对你来说都是很大的帮助。
+>3. 视频时长：无论是教材视频课程还是小吴的解析视频，都要倍速去看，至少1.5吧，解析视频可以更快，自行调整即可。
+>4. 老师选择：基础时选哪个老师都行，数一我还是建议张宇，数二武钟祥绝对没问题，数三不了解，抱歉。
 
+<br>
 
 **英语**
 
@@ -75,11 +96,19 @@ top: 2
 
 顺便再看看田静老师的句句真言，学学语法课，课程时间不长，每天学会，很快的，对于英语一来说，语法还是有些重要的。暑假前英语就这些任务
 
+<br>
+
+>
+>
+>1. 基础阶段任务：就是背单词和看《句句真言》语法课，田静老师主讲的，没有其他任务
+
+<br>
+
 **专业课408**
 
-我是学的408，所以自命题的可以划走了。
+<br>
 
-3月开始的，顺序：数据结构->操作系统->计算机组成原理->计算机网络
+3月开始的，用的**王道的教材**，**我的顺序**：数据结构->操作系统->计算机组成原理->计算机网络 ； **常用顺序**：数据结构->计算机组成原理->操作系统->计算机网络
 
 数据结构我一开始犯了个大错，看完用电脑实现算法，可千万别学我，浪费时间x2，我进度其实很慢，因为课多，加上方法不对，我4月底吧，才结束数据结构。
 
@@ -91,11 +120,22 @@ top: 2
 
 
 
-**综上**，前期比较轻松，不用管政治，每天6到8个小时就行了，大部分时间给专业课和数学，累了就玩，没必要绷很紧，还有最最最重要的就是，一定要相信自己能考上^o^y
+**综上**，前期比较轻松，**不用管政治**，每天6到8个小时就行了，大部分时间给专业课和数学，累了就玩，没必要绷很紧，还有最最最重要的就是，一定要相信自己能考上^o^y
 
+<br>
 
+>
+>
+>1. 刷题问题：首先肯定是看完一节视频就去刷教材后面紧跟的题目，但**注意**只刷选择题。
+>2. 课程观看：b站有王道的免费课程视频，但有些章节视频可能与教材不对应，因为视频比较老。告诉你个技巧，当你觉着不对应时，可以打开弹幕，屏蔽等级最高，去除重复，只留最上面的弹幕部分，会有弹幕告诉你这个视频对应的教材的哪哪哪页。
+>3. 前期学习频率：不用每天，大三课还是不少的，一周有个5天也不少了，每天花费8个小时就已经很多了，自己给自己安排个进度目标，我的备考进度不可能适用所有人，但节奏是大致的。前期学的多点少点是无所谓的，主要看中期。
+>4. 自命题：前期自命题如果你铁了心考目标院校，那就可以去学了，跟着王道视频来就行，刷完了再刷院校的历年真题，问上岸的学长学姐要备考资料。如果不知道考哪个，可以先按408，转也好转。
+
+<br>
 
 ### 中期-暑假篇
+
+<br>
 
 当你走到这里时，已经6月中旬了，真正的考研才开始。没学校课程的打扰了，现在你生活里只有两个字**复习**，此时每天学习10个小时左右了，而且需要认真学，注意力集中。
 
@@ -105,25 +145,31 @@ top: 2
 
 晚上的话，7点到10点半，8月份之前晚上全是英语，8月后我开始了政治，晚上就是政治+英语
 
+备考我还是建议，从暑假开始规律起来👇👇👇
+
+|                |        数学        |       英语       |        政治        |      专业课       |
+| :------------: | :----------------: | :--------------: | :----------------: | :---------------: |
+|     时间点     |       7月起        |      7月起       |   8月中下旬或9月   |       7月起       |
+| 备考时长(大致) | 一上午(7.30-11.30) | 晚上(7.30-10.00) | 晚上与英语平分时间 | 一下午(2.30-6.30) |
+| 时长可自行增加 |                    |                  |    建议9月开始     |                   |
+
 
 
 ---
 
-
+<br>
 
 **数学**
 
+数学在中期要开始强化，强化课程时长也很长，建议7月**中旬前**开始，笔记我还是推荐写书上，笔记本可以整理些常见套路，比如中值定理技巧什么的，自己总结总结还是有好处的。
 
-
-数学最晚7月吧，开始强化，强化课程时长也很长，笔记我还是推荐写书上，笔记本可以整理些常见套路，比如中值定理技巧什么的，自己总结总结还是有好处的。
-
-做题的话，880+1000题B、C组就ok了，880感觉质量不太行了，很多都是改的真题，这个就仁者见仁智者见智了，我是这么搭配的；如果你660基础打的好的话，1000题会很好多，不像某个同学，一道积分算一天，大笨蛋┭┮﹏┭┮。
+做题的话，李林880+张宇1000题B、C组就ok了，880感觉质量不太行了，很多都是改的真题，这个就仁者见仁智者见智了，我是这么搭配的；如果你660基础打的好的话，1000题会很好多，不像某个同学，一道积分算一天，大笨蛋┭┮﹏┭┮。
 
 至于结束时间，我9月开了学还没完，概率论还剩一半，也差不多了。
 
 题目讲解的话，880还是推荐[小吴学长啊]([小吴学长啊的个人空间-小吴学长啊个人主页-哔哩哔哩视频 (bilibili.com)](https://space.bilibili.com/487537846?spm_id_from=333.337.search-card.all.click))，但是880只会在b站免费一部分，剩下的是付费，建议拼夕夕购买网盘，大概11月才会更完吧。1000题就没办法了，b站有其他up的免费讲解，但是感觉不如小吴的细（说白了就是我基础差听不太明白），~~也许是我基础时不做660基础不牢的缘故~~
 
-
+<br>
 
 接下来的内容**triple star** ⭐⭐⭐
 
@@ -139,15 +185,31 @@ top: 2
 - **计算能力**
   - 这可以是我的痛点了，自高中`6+7=12`以来，一直保持着优良的水准，按照今年老头出题的情况老看，计算能力很重要，但我一直没找到好方法解决，这个就靠你们了，务必不要眼高手低，一道题算就把它算完。
 
-
+<br>
 
 我从强化开始全跟的宇爹了，~~如果不算后期自己搞自己转数二又转回数一的话~~
+
+<br>
+
+>
+>
+>1. 老师选择：强化时的老师是可以不和基础的老师一样的，自行定夺
+>
+>2. 刷题：跟基础时一样，强化完一章就去做对应章节的习题，但仍需要自行辨别题目章节与题目册章节，比如你强化跟武老师，搭配880会很顺手，都是根据考研大纲来编写的，但1000题可能就稍有不同，辨别方法仍与基础阶段一致；<br>
+>
+>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;反之你跟张宇，做880也会有所不同，自行辨别即可。
+>
+>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这个期间**不需要碰任何真题**，强化按部就班即可，不要跳跃直接看真题
+>
+>3. 进度问题：如果你基础时慢，或者考研开始的比较晚的话，`Don't worry about it`.一切都来得及，我写下这些时是7月28日，数一同学最好基础阶段概率论马上要结束，数二同学最晚快要结束线性代数了。如果已经开始强化了或者刚开始，也没事，暑假期间可以额外给数学点时间，赶赶进度，最晚10月中旬前结束，绝对不能再晚了，最好9月中下旬结束。
+>
+>4. 学习问题：觉得听不懂老师讲的内容怎么办。有时候老师讲的很深，不会直接告诉你题目怎么做，因为毕竟有人奔着140去考的，但你大概率不是，听不太明白没事，会做题就行，都是靠刷题刷出来的，或者b站去搜这个知识点，有许多个人up讲解的非常细致，我当时经常看完强化视频再去b站恶补。
 
 
 
 ---
 
-
+<br>
 
 **英语**
 
@@ -157,11 +219,27 @@ top: 2
 
 假如你上一个阶段单词还没背完或者没背熟，直接会影响你做阅读的，所以，一步一步走很重要，暑假的你会感谢春天的你的。
 
+<br>
 
+>
+>
+>1. 阅读课资源问题：阅读课我推荐了两个老师，课程在哪找，百度网盘，找资源这种事情我没法帮你，最简单的就是你买完任意一门教材，去联系客服要视频，哪怕就是张宇的《基础30讲》，商家会给你个网盘群，你加进去，里面什么公共课课程都有，所以不要再问我怎么找资源了好吗，真的不难，建议多加几个商家给的群，有的群会有不更的可能性。
+>
+>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;并且视频课是根本不需要买的(网盘均为盗版，并不鼓励盗版，只是大家都是普通学生，我相信不乏有家庭困难的)，不需要买教材，只需要买真题
+>
+>2. 刷题：你可以选择看完阅读技巧课再刷，也可以边看边刷，都可以。
+>
+>3. 一天两篇阅读，真题买的无论是《考研真相》还是《小黄书英语》，都行，都是真题，应该是04~24的真题。注意截至10月前只刷到15年的。进度快可以二刷，但大概率是不会出现这种情况的
+>
+>4. 其他题型：顶多顺便做个完形填空，不做也行
+>
+>5. 进度问题：
+
+![yingyu](./计算机考研篇/yingyu.png)
 
 ---
 
-
+<br>
 
 **408**
 
@@ -171,7 +249,7 @@ top: 2
 
 建议你看完4本书基础视频时，自己花个两天复习下，因为此时距离你看完数据结构可能已经过去3个多月了。
 
-
+<br>
 
 **强化-tips**
 
@@ -180,11 +258,27 @@ top: 2
 - 这阶段你怎么做题王道强化课会告诉你的，听他的就好。
 - 还有不要崩溃，相信自己，408就是有难度的，学不会也不怪你，你坚持到这里你已经很厉害了👍
 
+<br>
 
+>
+>
+>1. 强化视频：再次强调，更新的慢，资源去百度网盘找
+>
+>2. 刷题：咸鱼在视频里怎么说你就怎么来
+>
+>3. 基础知识问题：感觉忘了的话，可以花时间去回顾，把选择题再刷一遍，差不多需要一周多的时间，然后再开强化
+>
+>4. 进度问题：截至今天如果刚开始408，建议转自命题。如果还剩一本计网，赶快看，计网一周就差不多了，咸鱼据说计网基础视频还没更完，可以看【深入浅出计算机网络 微课视频】 https://www.bilibili.com/video/BV1NT411g7n6/?share_source=copy_web&vd_source=eee0e491313ab85acb98bf99c9c92d89这个，这个up讲的非常好。甚至可以交叉看，都可以的。我当初就嫌楼楼（以前王道计网讲解的人）部分章节讲的一般，就去看上面的那个视频。最晚强化得10月中旬前结束吧。
+>
+>5. 自命题同学：相对于408来说任务还是轻松许多的，无需太担忧，刚开始也没事，备考思路还是建议询问上岸的学长学姐，加那些考研群，肯定有已经上岸的人的
+>
+>6. 专业课选择：并不是说必须408，以我专业考研为例，本科双非一本，绝大多数11408或22408是不会上岸的，尤其是北京，判卷严格，我专业120来人，考研80%吧，考408的还是不少的，仅有两个上岸，一个我，一个是考的中农，但没上岸，调剂了一所双非。408的难度的确很大，可以考虑转自命题，我专业有俩人自命题西电，一个330+一个320+都上岸了，对比我北京11408考360去的中传，很明显自命题性价比更高，所以觉得408很难，可以转。
+>
+>   另外也不是说一定考不上，你只要把考研放在心上，不会说一定考不上的，我算不上有天赋的人，我当时一整年非常努力，从7月开始直到考前一直都是每天复习12小时左右，我没去自习室，在家复习，夏天很热屋子也没空调，几乎不出去玩放松，长痘脱发，已经都习惯了，睡不好也是家常便饭，我当时也并没有什么引路人带我，全靠自己，考研就是自己的事情，我把考研看的很重，我只知道我必须考上，这个苦我必须克服，我相信你也一样的，不要觉得遇到一些小困难就觉得很难，大家都一样的，加油，只要努力会考上的。
 
 ---
 
-
+<br>
 
 ### 后期
 
@@ -197,6 +291,8 @@ top: 2
 注意真题最好都留个3套11月/12月进行模拟用
 
 ---
+
+<br>
 
 - **数学**
   
@@ -215,30 +311,65 @@ top: 2
   - 真题最晚11月中旬前刷完吧，毕竟还有十几套模拟题。一到12月政治会折磨你的，耗费大量时间
   
     
+    
+    >1. 进度：9月是数学强化的收尾阶段，强化最晚时间在上面已经提过了
+    >2. 真题：刷真题时我记得买真题应该是03-24，刷的时候严格模拟考试时间刷，3个小时不多不少，刷完及时复盘，b站有许多up讲解真题的课程
+    >3. 模拟题：模拟题出的比较晚，好像10月下旬才会有，真题刷到21年就停，开刷模拟题，最后12月或11月下旬做最后3年的真题
+    >4. 分数：我真题以低分居多，因为计算错误频出，我一扣就是扣完，别看网上模拟哥，我大概只有两三次真题上了110吧，平均下来90左右，因为计算能力实在是差，也不少几套甚至80多分，这个分数别太在意，没事的，查漏补缺嘛。
+    
+    <br>
   
 - **英语**
+  
   - 此时你在二刷阅读，或者做着15年之后的题了，阅读要靠自己悟，我是10月份某天突然顿悟的，还有还不要去做英二的阅读，绝对不要！！！英一英二思路不一样，别理英二
   - 也要去做新题型和完型填空，至于看谁的课，我就不好说了，可以先自己试着做几篇，看看情况怎么样，除阅读以外的所有英语题型从10年开始，二刷阅读也从10年开始，而且10年刚开始分英语1英语2老头没把握好出题难度，你做不好不怪你，怪老头
   - 翻译的话，有个老师叫唐静（仅限英1，英二翻译简单不行不用看），看盗版课就行，也不用买教材，也没教材，英语就用你那个真题就行
   - 作文的话，10月也该看了，我是11月开始的，呜呜呜，进度再次落后；我看的周思成的，你问我为什么看他的？因为我姐看的她，她让我看他。他有个万能模板，反正背了就会写大作文，我也不知道我英语作文多少分，这个老师也仁者见仁智者见智吧。Tip：有点娘
   
+  >
+  >
+  >1. 阅读：继续刷，二刷或刷后面的都行，务必像数学一样留近三年真题不刷，11月下旬刷
+  >2. 其余题型：完型，翻译，作文，新题型，这类看什么课可以去b站搜，我完型都没看课，会单词和语法拿个8分没啥问题吧，9月后可以刷阅读时顺便做个完型或新题型，做的好就不需要看课了，翻译就专门另找时间和作文一起做吧，建议10月开翻译和作文，晚些也无妨，只要11月中旬前刷完真题就行（不包括近三年）
+  
+  <br>
+  
 - **专业课**
   - 强化完再开始真题，真题刷完可以做做王道的模拟8套
-  - 模拟8套大题有的比较怪，毕竟王道自己出的，可以不做，选择就都做做吧
+  
+  - 模拟8套大题有的比较怪，毕竟王道自己出的，可以不做，选择题就都做做吧
+  
   - 真题要二刷，甚至三刷，重刷的时候可以侧重年份新点的题目
+  
   - 10月份王道还会更个让你捡起来基础视频的视频，也不长，但我感觉没用，自己看着取舍吧
+  
   - 真题什么时候刷完，我觉得大概11月？我进度算慢的，12月还在二刷三刷，最后模拟是在12月10号左右，做的最后一套408真题
   
+    >
+    >
+    >1. 真题：建议刷个4，5遍，错的题专门整理出来，刷个7遍，我就是这样的，多刷几遍没坏处
+  
+    <br>
+  
 - **政治**
-  - 我八月份开始的，看徐涛的核心考案，看完做肖秀荣1000题，直接开两倍速看，快的话一个月就完事了，视频挺长的，但不建议很早开始，8月中下旬也可以的，9月初也行
-  - 9月开了学你要买背诵手册，腿姐的或者肖秀荣的都行
+  
+  - 我八月份开始的，看徐涛的《核心考案》，看完做《肖秀荣1000题》，直接开两倍速看，快的话一个月就完事了，视频挺长的，但不建议很早开始，8月中下旬也可以的，9月初也行
+  - 9月开了学你要买《背诵手册》，腿姐的或者肖秀荣的都行
   - 政治不需要真题！！！
   - 政治严格来说分为选择题和大题
   - 大题是11月底再开始背的，刚进12月也行
   - 选择题的话，做肖1000题，多做几遍（反正都说刷好几遍，但是一到考场一看一个原题类似题都没有，哭死）；看完徐涛的视频可以去看腿姐的选择技巧课，9月开更，一个多月更完
   - 大题我是认准的腿姐，一般不是背腿姐就是跟肖4，12月也会有腿姐9页纸，是真要下功夫背啊，挺多的
 
+>
+>
+>1. 大题背诵(11月底开始)：你要记忆力好，想拿高分(仁者见仁智者见智)，去背腿姐的；记忆力差，不想背，去背肖四。腿姐的不是一般的多，是很多，我是逼着自己背完了，自行定夺吧。
+>2. 选择技巧课：想一心跟腿姐，就去看看吧，9月更
 
+
+
+---
+
+<br>
 
 9月会有预报名，10月底正式报名。9月起到真正考前这段时期很难熬，每天复习11小时左右，每天吃饭就是休息，回宿舍发现舍友还很轻松，在玩，你内心更是：我\**\***\*。做过的题还是错，单词怎么还是有些记不住，专业课学不完，数学学不完，英语学不完，政治搞不懂，怎么别人做的那么好，网上一看，各种模拟哥，分好高啊。三天一小崩两天一大崩，每天都是我能考上😎我考不上😭反复横跳。
 
@@ -252,7 +383,7 @@ top: 2
 
 加油别放弃，考上了的一定是坚持下来的，哭着考完，笑着上岸。
 
-
+<br>
 
 ## 书＆题-购买指南
 
@@ -262,7 +393,7 @@ top: 2
 >
 >先别骂，我只是想单独写下购买指南。
 
-
+<br>
 
 以下是你的购买清单：
 
@@ -291,7 +422,7 @@ top: 2
   - [ ] 《肖4》《肖8》（选）我就用的pdf
   - [ ] 《张宇8套卷》《李林6套》《张宇4套》等等等
 
-  
+  <br>
 
   
 
@@ -305,7 +436,7 @@ top: 2
 >
 >另：我全用的盗版教材，没有买过正版书，穷苦学生一枚呜呜呜🫡。网课买盗版教材商家会有网盘群的，也可以去公众号《研池大叔》那里面找。
 
-
+<br>
 
 ## 后记
 
@@ -319,7 +450,7 @@ top: 2
 
 ---
 
-
+<br>
 
 另外，感谢2023的自己，这段经历我永远不会忘记，谢谢你，辛苦你了。
 
@@ -333,7 +464,7 @@ top: 2
 
 无论怎样，我都坚持下来了，我所能做的仅是这样了，希望当你明年出成绩时，也会被你的分数所惊讶到。
 
-
+<br>
 
 考研难难在人，我不知道备考时崩溃了多少次，高考时一次没哭过，考研时11月份左右，真的顶不住了，无以言表，经历过才知道有多难。出分那天我永远忘不了，分数出来的那一刻，才是真的感觉一年没白费，是真顶不住，泪如泉涌，我真的付出太多太多太多了，我可以失败，但决不接受失败。我把考研看的很重，算是对自己偏离的人生的又一次弥补吧，这次，我又做到了。
 
@@ -349,13 +480,13 @@ top: 2
 
 ---
 
-
+<br>
 
 **TO：未来的研究生**
 
-我不想神化考研，但是只要你是想考上，这个苦你必须得吃的下去，游戏暑假后该删就删，别觉得一天11个小时很多，谁不累啊，别睡懒觉，坚持下去，不许二战，加油。
+我不想神化考研，但是只要你是想考上，这个苦你必须得吃的下去，游戏暑假后该删就删，别觉得一天11,12个小时很多，谁不累啊，别睡懒觉，坚持下去，不许二战，加油。
 
-
+<br>
 
 ## Q＆A-问题解答
 
@@ -363,7 +494,9 @@ top: 2
 
 ### 在哪看课程视频？
 
-我全用的盗版教材，没有买过正版书，穷苦学生一枚呜呜呜🫡。网课买盗版教材商家会有网盘群的，也可以去公众号《研池大叔》那里面找（里面也是网盘链接）。
+我全用的盗版教材，没有买过正版书，穷苦学生一枚呜呜呜🫡。网课买盗版教材商家会有网盘群的，也可以去公众号《研池大叔》那里面找（里面也是网盘链接）。最新：似乎公众号凉了。
+
+课程在哪找，百度网盘，找资源这种事情我没法帮你，最简单的就是你买完任意一门教材，去联系客服要视频，哪怕就是张宇的《基础30讲》，商家会给你个网盘群，你加进去，里面什么公共课课程都有，所以不要再问我怎么找资源了好吗，真的不难，建议多加几个商家给的群，有的群会有不更的可能性。
 
 ### 408代码题怎么写？没学过C/C++？
 
@@ -400,3 +533,29 @@ top: 2
 - 还有像计网里IP地址多少位，这些学过自然而然就记住了
 
 基本上不需要死记
+
+
+
+### 百度网盘倍速问题
+
+无法倍速？需要会员？ipad不用，小红书有教程，安卓不晓得，不行就整个会员吧，或者找找其余方法，因为我备考是用的ipad，所以安卓并不了解
+
+### 怎么找学校？
+
+额，一开始有人问我这个我是比较懵的，这个我也没得办法帮你啊，身为未来的研究生这些信息搜索能力还是要有的，最简单的就是想去哪个地方就看哪个地方的学校了，或者目标远大，就搜计算机学科评估，看那些评级好的学校就去官网搜往年录取信息。
+
+也可以关注《灰灰考研》公众号，向它发学校名称，会回复你近两年的学校录取信息。
+
+### 单词要每天背吗？
+
+毋庸置疑，每天背，我背过的单词截至今天还记得许多，一定要熟记，一直背到考研那天，才算正式结束。
+
+### 进度太慢落后太多怎么办？
+
+再次借用吴恩达老师的名言`Don't worry about it`.
+
+你只管学就好，进度很慢就去赶，一切都来得及，我10底在学概率论，在刷660，在补880概率，甚至真题都没机会二刷，11月底才学完作文，这进度算慢了吧，中途还浪费一个月时间转数二转回数一，这够浪费时间了吧，这不照样考上了。
+
+所以别太焦虑，当然虽说不焦虑是不可能的，但还是尽量放平心态，考研就是这样，难在人，不报班自己去复习准备，这条路总会艰难许多，比你想象中的还要难上好些，但这当时确实是我此生绝无仅有的机会，丝毫不想再来一年，所以还是硬扛着坚持下来了，相信自己，没什么不可能。
+
+李培楠在卡托维兹夺冠的概率是0.37%，仅以生活的角度来看，这似乎是不可能事件，你也许和他一样，会是不可能中的**唯一可能**。
