--- a/pages/posts/计算机考研篇.md
+++ b/pages/posts/计算机考研篇.md
@@ -6,7 +6,7 @@ categories: 生活记录
 aplayer: true
 top: 2
 updated: 2024-07-31 17:33:48
-markdownClass: MyClass
+markdownClass: MyClass markdown-body
 ---
 
 ![:CSKaoyan](https://count.getloli.com/@:CSKaoyan?theme=green)
